--- a/Site/cadastro.html
+++ b/Site/cadastro.html
@@ -42,11 +42,13 @@
             </ul>
             <div id="erro" class="erro">
             </div>
-            <button onclick="Cadastrar()">
-                <h3>
-                    Criar conta
-                </h3>
-            </button>
+            <div class="botao">
+                <button onclick="Cadastrar()">
+                    <h3>
+                        Criar conta
+                    </h3>
+                </button>
+            </div>
         </div>
     </div>
 </body>
