--- a/Site/index.html
+++ b/Site/index.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fast & Furious</title>
     <link rel="stylesheet" href="CSS/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Brygada+1918:ital,wght@1,700&family=Edu+TAS+Beginner&display=swap"
+        rel="stylesheet">
 </head>
-
 <body>
     <!-- HEADER -->
     <div class="content">
@@ -36,18 +40,12 @@
                 <div class="settingsConfig">
                     <ul>
                         <a href="#filmes">Filmes</a>
+                        <div class="linha"></div>
                         <a href="#Robs&Shaw">Spin Off</a>
+                        <div class="linha"></div>
                         <a href="#SobreMim">Quem sou eu</a>
+                        <div class="linha"></div>
                         <a href="#informacoes">Cadastro</a>
-                    </ul>
-                </div>
-            </div>
-            <div id="barM" class="configuracoes" style="display: none;">
-                <div class="settingsConfig">
-                    <ul>
-                        <a href="#filmes">Log in</a>
-                        <a href="#Robs&Shaw">Cadastro</a>
-                        <a href="#SobreMim">Todos os filmes</a>
                     </ul>
                 </div>
             </div>
@@ -186,7 +184,8 @@
                 <h2>Quem sou eu??</h2>
                 <h3> Olá, meu nome é Antonio Gonçalves Sousa, tenho 18 anos e gosto bastante de filmes, séries, carros,
                     futebol, matemática e animais. Sou uma pessoa bastante proativa e tranquila, sempre buscando
-                    me aperfeiçoar e compartilhar conhecimento com colegas. Também me considero uma pessoa curiosa e que está
+                    me aperfeiçoar e compartilhar conhecimento com colegas. Também me considero uma pessoa curiosa e que
+                    está
                     sempre interessada em aprender e se diversificar cada vez mais, e isso é o que me impulsiona a novas
                     descobertas.
                 </h3>
@@ -224,14 +223,14 @@
                 <h2>Velozes & Furiosos</h2>
             </ul>
             <ul>
+                <a href="https://www.tiktok.com/@tonhao_222?_t=8hGAe8f5P53&_r=1">
+                    <img id="up" src="CSS/Referencias/RedesSociais/github.png">
+                </a>
                 <a href="https://www.instagram.com/tonhao_222/">
                     <img id="up" src="CSS/Referencias/RedesSociais/instagramcor.png">
                 </a>
                 <a href="https://x.com/tonhao_222?s=21&t=-e1uavhVGmsyv8Z20bY-JA">
                     <img id="up" src="CSS/Referencias/RedesSociais/twittercor.png">
-                </a>
-                <a href="https://www.tiktok.com/@tonhao_222?_t=8hGAe8f5P53&_r=1">
-                    <img id="up" src="CSS/Referencias/RedesSociais/tik-tokcor.png">
                 </a>
             </ul>
         </div>
