--- a/Site/login.html
+++ b/Site/login.html
@@ -30,11 +30,13 @@
             </ul>
             <div id="erro" class="erro">
             </div>
-            <button onclick="Login()">
-                <h3>
-                    Entrar
-                </h3>
-            </button>
+            <div class="botao">
+                <button onclick="Login()">
+                    <h3>
+                        Entrar
+                    </h3>
+                </button>
+            </div>
         </div>
     </div>
 </body>
