--- a/site/public/login.html
+++ b/site/public/login.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro Fast & Furious</title>
+    <link rel="icon" href="css/Referencias/Fast_X_logo.png">
     <link rel="stylesheet" href="CSS/cadastroLogin.css">
 </head>
 
