--- a/site/public/joguinho.html
+++ b/site/public/joguinho.html
@@ -29,39 +29,21 @@
         </div>
         <div class="box">
             <div id="imagem" class="imagem">
-                <a href="#question" style="text-decoration: none;">
-                    <button>Ir para o Jogo da memória</button>
+                <a href="Quiz.html" style="text-decoration: none;">
+                    <button>Ir para o Quiz</button>
+                </a>
+                <a href="#content" style="text-decoration: none;">
+                    <button id="leader">Ver Ranking</button>
                 </a>
             </div>
         </div>
     </div>
-    <div class="first">
-        <div class="second">
+    <div id="content" class="content">
+        <div class="line">
+            <h1>Ranking</h1>
         </div>
-    </div>
-    <div id="mid" class="mid">
-        <div id="question" class="question">
-            <h1>Desafio Velozes & Furiosos Quiz!</h1>
-            <h3>
-                E aí, aventureiro da velocidade! Se você acha que conhece cada curva da franquia "Velozes & Furiosos",
-                chegou a hora de testar seus conhecimentos no nosso Quiz especial!
-                <br><br>
-                Prepare-se para mergulhar no universo cheio de adrenalina, carros turbinados e muita ação. Desafie seus
-                amigos, mostre que é o verdadeiro mestre das pistas e divirta-se enquanto revisita os momentos mais
-                emocionantes da saga!
-                <br><br>
-                Vai encarar? Clique aqui e mostre que você é um verdadeiro fã da velocidade
-            </h3>
-            <ul>
-                <a href="#container" style="text-decoration: none;">
-                    <button>
-                        Retornar
-                    </button>
-                </a>
-                <button onclick="Start()">
-                    Começar quiz
-                </button>
-            </ul>
+        <div class="rank">
+
         </div>
     </div>
 </body>
