Mechendo na modelagem

--- a/site/public/cadastro.html
+++ b/site/public/cadastro.html
@@ -20,25 +20,43 @@
                     <label for="input_nome_cadastro">
                         Nome:
                     </label>
-                    <input id="input_nome_cadastro">
+                    <input id="input_nome_cadastro" placeholder="Insira seu nome">
                 </b>
                 <b>
                     <label for="input_email_cadastro">
                         E-mail:
                     </label>
-                    <input id="input_email_cadastro">
+                    <input id="input_email_cadastro" placeholder="example@example.com">
                 </b>
                 <b>
                     <label for="input_senha_cadastro">
                     Senha:
                     </label>
-                    <input id="input_senha_cadastro">
+                    <input id="input_senha_cadastro" type="password" placeholder="********">
                 </b>
                 <b>
                     <label for="input_confirma_cadastro">
                     Confirme sua senha:
                     </label>
-                    <input id="input_confirma_cadastro">
+                    <input id="input_confirma_cadastro" type="password" placeholder="********">
+                </b>
+                <b>
+                    <label for="input_filme_cadastro">
+                    Filme Favovito:
+                    </label>
+                    <select name="" id="select_filme_fav">
+                        <option value="Velozes e Furiosos">Velozes e Furiosos</option>
+                        <option value="+Velozes + Furiosos">+Velozes + Furiosos</option>
+                        <option value="Velozes e Furiosos 3">Velozes e Furiosos 3</option>
+                        <option value="Velozes e Furiosos 4">Velozes e Furiosos 4</option>
+                        <option value="Velozes e Furiosos 5">Velozes e Furiosos 5</option>
+                        <option value="Velozes e Furiosos 6">Velozes e Furiosos 6</option>
+                        <option value="Velozes e Furiosos 7">Velozes e Furiosos 7</option>
+                        <option value="Velozes e Furiosos 8">Velozes e Furiosos 8</option>
+                        <option value="Velozes e Furiosos 9">Velozes e Furiosos 9</option>
+                        <option value="Velozes e Furiosos: Hobbs & Shaw">Velozes e Furiosos: Hobbs & Shaw</option>
+                        <option value="Velozes e Furiosos 10">Velozes e Furiosos 10</option>
+                    </select>
                 </b>
             </ul>
             <div id="erro" class="erro">
