--- a/site/public/joguinho.html
+++ b/site/public/joguinho.html
@@ -10,6 +10,12 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Brygada+1918:ital,wght@1,700&family=Edu+TAS+Beginner&display=swap"
         rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com%22%3E/
+<link rel=" preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,800;0,9..40,900;1,9..40,1000&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -38,12 +44,20 @@
             </div>
         </div>
     </div>
+
     <div id="content" class="content">
         <div class="line">
             <h1>Ranking</h1>
         </div>
         <div class="rank">
-
+            <div class="boxMensagem" id="mensagem">
+                <div class="mensagem">
+                    <h3>Posição</h3>
+                    <h3>Nome</h3>
+                    <h3>Tentativas</h3>
+                    <h3>Pontuação total</h3>
+                </div>
+            </div>
         </div>
     </div>
 </body>
