--- a/site/public/login.html
+++ b/site/public/login.html
@@ -20,13 +20,13 @@
                     <label for="input_email_login">
                         E-mail:
                     </label>
-                    <input id="input_email_login">
+                    <input id="input_email_login" placeholder="Seu nome">
                 </b>
                 <b>
                     <label for="input_senha_login">
                         Senha:
                     </label>
-                    <input id="input_senha_login">
+                    <input id="input_senha_login" placeholder="********" type="password">
                 </b>
             </ul>
             <div id="erro" class="erro">
