Mechenddo no css do ranking

--- a/site/public/joguinho.html
+++ b/site/public/joguinho.html
@@ -50,12 +50,15 @@
             <h1>Ranking</h1>
         </div>
         <div class="rank">
+            <div class="top">
+                <h3>Posição</h3>
+                <h3>Nome</h3>
+                <h3>Tentativas</h3>
+                <h3>Pontuação total</h3>
+            </div>
             <div class="boxMensagem" id="mensagem">
                 <div class="mensagem">
-                    <h3>Posição</h3>
-                    <h3>Nome</h3>
-                    <h3>Tentativas</h3>
-                    <h3>Pontuação total</h3>
+
                 </div>
             </div>
         </div>
