--- a/site/public/index.html
+++ b/site/public/index.html
@@ -238,7 +238,7 @@
                 <h2>Velozes & Furiosos</h2>
             </ul>
             <ul>
-                <a href="https://www.tiktok.com/@tonhao_222?_t=8hGAe8f5P53&_r=1">
+                <a href="https://github.com/AntonioGoncalvesSousa">
                     <img id="up" src="CSS/Referencias/RedesSociais/github.png">
                 </a>
                 <a href="https://www.instagram.com/tonhao_222/">
